--- a/example.html
+++ b/example.html
@@ -7,12 +7,12 @@
     <script src="jquery.popupwindow.js"></script>
     <script>
       $(function() {
-        $('.defaults').on('click', function(event) {
+        $('.example-defaults').on('click', function(event) {
           event.preventDefault();
           $.popupWindow('http://google.com');
         });
 
-        $('.small').on('click', function(event) {
+        $('.example-small').on('click', function(event) {
           event.preventDefault();
           $.popupWindow('http://google.com', {
             width: 200,
@@ -20,7 +20,7 @@
           });
         });
 
-        $('.callback').on('click', function(event) {
+        $('.example-callback').on('click', function(event) {
           event.preventDefault();
           $.popupWindow('http://google.com', {
             onUnload: function() {
@@ -38,9 +38,9 @@
     <h2>Examples</h2>
 
     <ul>
-      <li><a href="#" class="defaults">Open window (with defaults)</a></li>
-      <li><a href="#" class="small">Open window (custom size: 200x200)</a></li>
-      <li><a href="#" class="callback">Open window (close callback)</a></li>
+      <li><a href="#" class="example-defaults">Open window (with defaults)</a></li>
+      <li><a href="#" class="example-small">Open window (custom size: 200x200)</a></li>
+      <li><a href="#" class="example-callback">Open window (close callback)</a></li>
     </ul>
 
     <h2>More Details</h2>
